enable_testing()

include_directories("../src/include")
include_directories("../src")
include_directories(".")

add_definitions(-DTEST_MODELS_DIR=${PROJECT_SOURCE_DIR}/test/models)

add_subdirectory(base)
add_subdirectory(cas)
add_subdirectory(cellml)
add_subdirectory(compiler)
add_subdirectory(file)
add_subdirectory(flint)
add_subdirectory(gui)
add_subdirectory(job)
add_subdirectory(layout)
add_subdirectory(load)
add_subdirectory(mathml)
add_subdirectory(method)
add_subdirectory(phml)
add_subdirectory(phsp)
add_subdirectory(phz)
add_subdirectory(run)
add_subdirectory(runtime)
add_subdirectory(sbml)
add_subdirectory(sedml)
