SUBDIRS = \
	common \
	compiler \
	method \
	csv2isd \
	flint-cellml \
	flint-file \
	flint-flow \
	flint-layout \
	flint-nc \
	flint-param \
	flint-phml \
	flint-phml-xfail \
	flint-phsp \
	flint-phz \
	flint-sbml \
	flint-spec \
	flint-taskpref \
	flint-taskspec \
	flint-unit \
	isd2csv \
	isdbswap \
	isdcut \
	isddiff \
	isdhead \
	isdls \
	isdmerge \
	isdrand \
	isdsort \
	isdstrip \
	isdwc \
	base \
	mathml \
	sbml \
	sys
