SUBDIRS = \
	base \
	cas \
	cellml \
	compiler \
	file \
	flint \
	gui \
	job \
	layout \
	load \
	mathml \
	method \
	phml \
	phsp \
	phz \
	run \
	runtime \
	sbml \
	sedml \
	sys \
	csv2isd \
	isd2csv \
	isdbswap \
	isdcut \
	isddiff \
	isdhead \
	isdls \
	isdmerge \
	isdrand \
	isdsort \
	isdstrip \
	isdwc
