include $(top_srcdir)/common.mk
include $(top_srcdir)/test/test.mk

TESTS = \
	test-eq-determinant \
	test-eq-transpose \
	test-equations

noinst_PROGRAMS = $(TESTS)

test_eq_determinant_SOURCES = test-eq-determinant.cc
test_eq_transpose_SOURCES = test-eq-transpose.cc
test_equations_SOURCES = test-equations.cc
